[package]
name = "chartmuseum-ctl"
version = "0.1.0"
edition = "2018"
default-run = "cm-cli"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
clap = "2.33.3"
log = "0.4"
env_logger = "0.9.0"
regex = "1"

[[bin]]
name = "cm-cli"
path = "src/main.rs"
